--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,39 @@
 <ion-header>
   <ion-navbar>
+
+
     <ion-title>
-      Ionic Blank
+      Login
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-card>
+    <img src="../assets/imgs/app-logo.jpg" id="logo-img">
+    <ion-card-content>
+      <ion-card-title>
+        Login to Weather App
+      </ion-card-title>
+      <ion-input type="text" placeholder="Username"></ion-input>
+      <ion-input type="password" placeholder="Password"></ion-input>
+      <button block color="success" ion-button>
+        <ion-icon name="log-in"></ion-icon>
+        Login
+      </button>
+    </ion-card-content>
+  </ion-card>
+  <div id="forgot-pass">Forgot Password?</div>
+  <ion-buttons class="social-login-button">
+    <button id="fb" (click)="facebookLogin()">
+      <ion-icon name="logo-facebook" large></ion-icon>
+    </button>
+    <button id="gg">
+      <ion-icon name="logo-googleplus" (click)="googleLogin()"></ion-icon>
+    </button>
+    <button id="tt">
+      <ion-icon name="logo-twitter"></ion-icon>
+    </button>
+  </ion-buttons>
+  <p id="sign-up">Sign up</p>
 </ion-content>
